--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = upesy_wroom
 framework = arduino
+upload_protocol = espota
+upload_port = 192.168.2.131
+upload_flags = --auth=admin
+
