--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,22 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:upesy_wroom]
+[env:esp32dev]
 platform = espressif32
-board = upesy_wroom
+board = esp32dev
 framework = arduino
-upload_protocol = espota
-upload_port = 192.168.2.131
-upload_flags = --auth=admin
 
+; OTA Upload Configuration
+upload_protocol = espota
+upload_port = 192.168.2.126
+upload_flags =
+    ;--auth=admin
+    --progress
+    --timeout=10000
+
+; Monitor Configuration
+monitor_speed = 115200
+monitor_filters =
+    esp32_exception_decoder
+    time
+    colorize
