Working OTA for PlatformIO!

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,62 @@
 platform = espressif32
 board = upesy_wroom
 framework = arduino
+
+; Monitor settings
+monitor_speed = 115200
+monitor_filters = time
+
+; Upload protocols - OTA Settings
+upload_protocol = espota
+upload_port = 192.168.2.126  ; Update this to your ESP32's IP address
+; For initial USB upload, use: pio device upload --environment upesy_wroom_upload
+
+; Flash memory settings
+board_build.f_flash = 80000000L
+board_build.flash_mode = dio
+board_build.flash_size = 4MB
+
+; Flash partitions for OTA
+board_build.partitions = huge_app.csv
+
+; Build flags for OTA optimization
+build_flags =
+    -D ARDUINOJSON_ENABLE_PROGMEM=1
+    -D CORE_DEBUG_LEVEL=ARDUINO_LOG_INFO
+    -D CONFIG_ARDUINO_LOG_LEVEL=3
+
+; WiFi library dependencies (already included in ESP32 Arduino core)
+; ArduinoOTA library is part of ESP32 Arduino core
+lib_deps =
+    # Add any additional OTA-related libraries if needed
+    ArduinoJson
+
+; Files to exclude from OTA update
+board_build.exclude_files =
+    .pio/build/
+    .vscode/
+    .git/
+
+; Environment-specific settings for direct USB upload
+[env:upesy_wroom_upload]
+platform = espressif32
+board = upesy_wroom
+framework = arduino
+
+; Upload via USB (override OTA settings)
+upload_protocol = esptool
+upload_speed = 115200  ; Reduced from 921600 for stability
+upload_port = /dev/cu.usbserial-14420  ; Your actual USB port
+monitor_speed = 115200
+monitor_port = /dev/cu.usbserial-14420  ; Your actual USB port
+
+; Flash memory settings for USB upload
+board_build.f_flash = 80000000L
+board_build.flash_mode = dio
+board_build.flash_size = 4MB
+
+; Build flags
+build_flags =
+    -D ARDUINOJSON_ENABLE_PROGMEM=1
+    -D CORE_DEBUG_LEVEL=ARDUINO_LOG_INFO
+    -D CONFIG_ARDUINO_LOG_LEVEL=3
